# transcribe

./: .copier-answers.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  pyproject.toml
.envrc.d/: uv-certs.sh  uv.sh
.github/: SECURITY.md  dependabot.yml
resources/cookies/: tiktok.txt
scripts/: release.py
skill/: README.md  SKILL.md
src/gerardnico/: __init__.py  transcript.py
src/gerardnico/transcribe/: api.py  cli.py  error.py  ffmpeg.py  mcp_server.py  secret.py  social.py  transcribe.py  vtt.py  whisper.py  whisper_processing.py
src/gerardnico/transcribe/mcp/: mcp_server.py
ssl-certs/: .keep.md
tests/fixtures/home/tiktok/user-id/: subtitle.eng-US.txt
tests/gerardnico/transcribe/: test_cli.py  test_mcp_server_auth.py
